Responded to first batch of self-review comments on #5753.